@@ -271,6 +271,10 @@ input, select, textarea {
     padding: 0.25em 0.65em;
   }
 
+  figcaption {
+    font-size: 80%;
+  }
+
   pre {
     -webkit-overflow-scrolling: touch;
     font-family: "Courier New", monospace;
