@@ -114,15 +114,15 @@
             </ul>
         
             <!-- ############################# -->
-            <h4 id="add_opts">Additional options</h4>
+            <h5 id="add_opts">Additional options</h5>
             <p>Additional parameters and options are displayed in the <a class="function" href="matlab:cat12('expert');">CAT12 expert mode</a>. Please note that this mode is for experienced users only.</p>
         
             <!-- ############################# -->
-            <h4 id="errors">Errors during preprocessing</h4>
+            <h5 id="errors">Errors during preprocessing</h5>
             <p>Please use the <a class="function" href="matlab:cat_io_senderrormail;">Report Error</a> function if any errors during preprocessing occurred. You first have to select the "err" directory, which is located in the folder of the failed record, and finally, the specified zip-file should be attached manually in the mail.</p>
         
             <!-- ############################# -->
-            <h4><sup>1</sup>Note to filter sizes for Gaussian smoothing</h4>
+            <h5><sup>1</sup>Note to filter sizes for Gaussian smoothing</h5>
             <p>Due to the high accuracy of the spatial registration approaches used in CAT12, you can also try to use smaller filter sizes of only a few millimeter. However, for very small filter sizes or even no filtering, you have to apply a non-parametric permutation test such as the <a class="function" href="matlab:if exist(fullfile(spm('dir'),'toolbox','TFCE')),spm_jobman('interactive','','spm.tools.tfce_estimate'), else cat_install_tfce, end;">TFCE-statistics</a>. <br>
             Please also note that for the analysis of cortical folding measures such as gyrification or cortical complexity the filter sizes have to be larger (i.e. in the range of 15-25mm). This is due to the underlying nature of this measure that reflects contributions from both sulci as well as gyri. Therefore, the filter size should exceed the distance between a gyral crown and a sulcal fundus.</p>
 
@@ -344,10 +344,10 @@
               </tr>
               <tr>
                 <td colspan="1" rowspan="1">
-                <p><b>Figure 1:</b> SPM12 menu</p>
+                <figcaption><b>Figure 1:</b> SPM12 menu</figcaption>
                 </td>
                 <td colspan="1" rowspan="1">
-                <p><b>Figure 2:</b> CAT12 Window</p>
+                <figcaption><b>Figure 2:</b> CAT12 Window</figcaption>
                 </td>
               </tr>
             </table>
@@ -386,7 +386,7 @@
             </ul>
             
             <br><p><img id="figure3" width=80% alt="Batch Editor" src="images/batch_gui.jpg"></p>
-            <p><b>Figure 3:</b> The Batch Editor is the environment where the analysis is set up. Left: For all settings marked with &quot;&lt;-X&quot;, files have to be selected (&quot;Select Files&quot;). Right: Parameters can be edited and adapted (&quot;Edit Value&quot;).</p>
+            <figcaption><b>Figure 3:</b> The Batch Editor is the environment where the analysis is set up. Left: For all settings marked with &quot;&lt;-X&quot;, files have to be selected (&quot;Select Files&quot;). Right: Parameters can be edited and adapted (&quot;Edit Value&quot;).</figcaption>
             
             <!-- ################################################################################# -->
             <h2 id="overview_process">Overview of CAT12 processing</h2>
@@ -401,7 +401,7 @@
             <p><u>Surface-based processing:</u> During the surface registration, the cortical surfaces of the two hemispheres are registered to the Freesurfer <a href="matlab:web('https://surfer.nmr.mgh.harvard.edu/fswiki/FsAverage','-browser')">&quot;FsAverage&quot; template</a> (as provided with CAT). For surface-based ROI analyses, CAT provides a selection of surface-based atlases. As the surface registration module uses the Freesurfer &quot;FsAverage&quot; template, surface-based ROI analyses are not impacted by any template modification during voxel-based processing. In contrast to voxel-based ROI analyses, surface-based ROI analyses can, therefore, be applied regardless of whether the predefined or customized versions of the DARTEL or Geodesic Shooting template have been used.</p>
 
             <p><img id="figure4" width=80% alt="cat_processing_steps" src="images/cat_processing_steps.png"></p>
-            <p><b>Figure 4:</b> Overview of CAT's major processing steps.</p>
+            <figcaption><b>Figure 4:</b> Overview of CAT's major processing steps.</figcaption>
             
             <!-- ############################# -->
             <h4 id="process_details">CAT12 processing steps in detail</h4>
@@ -417,7 +417,7 @@
             <p>Optionally, the <em>&quot;surface-based processing&quot;</em> will be run following the completion of the voxel-based processing steps. Here, the cortical thickness estimation and reconstruction of the central surface occur in one step using a projection-based thickness (PBT) method (<a href="matlab:web('https://doi.org/10.1016/j.neuroimage.2012.09.050','-browser')">Dahnke et al., 2013</a>). Importantly, this PBT allows the appropriate handling of partial volume information, sulcal blurring, and sulcal asymmetries without explicit sulcus reconstruction (<a href="matlab:web('https://doi.org/10.1016/j.neuroimage.2012.09.050','-browser')">Dahnke et al., 2013</a>). After the initial surface reconstruction, topological defects<b><sup>*</sup></b> are repaired using spherical harmonics (<a href="matlab:web('https://doi.org/10.1002/hbm.21095','-browser')">Yotter et al., 2011a</a>). The topological correction is followed by a surface refinement, which results in the final central surface mesh. This mesh provides the basis to extract folding patterns (i.e., based on the position of mesh nodes relative to each other), where the resulting local values (e.g., absolute mean curvature) are projected onto each node. Subsequently, the individual central surfaces are spatially registered to the Freesurfer &quot;FsAverage&quot; template using a spherical mapping with minimal distortions (<a href="matlab:web('https://doi.org/10.1016/j.neuroimage.2011.02.007','-browser')">Yotter et al., 2011b</a>). In the last step, the local thickness values are transferred onto the Freesurfer &quot;FsAverage&quot; template. While this last step is performed by default during the surface-based processing, it can be repeated to also transfer measurements of cortical folding (e.g., gyrification) as well as other measurements or data (e.g., functional or quantitative MRI) to the Freesurfer &quot;FsAverage&quot; template. Note that the spatial registration of cortical measurements is combined with a spatial smoothing step in CAT to prepare the data for statistical analysis.</p>
             
             <p><img id="figure5" width=80% alt="cat_processing_pipeline" src="images/cat_processing_pipeline.png"></p>
-            <p><b>Figure 5:</b> Schematic flowchart of CAT's processing pipeline.</p>
+            <figcaption><b>Figure 5:</b> Schematic flowchart of CAT's processing pipeline.</figcaption>
             
             <!-- ################################################################################# -->
             <h2 id="process_data">Preprocessing data</h2>
@@ -1020,7 +1020,7 @@
               </tr>
               <tr>
                 <td colspan="1" rowspan="1">
-                <p><b>Figure 6:</b> Gray boxes between the parameters point to a co-linearity (correlation): the darker the box the larger the correlation (which also holds for inverse correlations). If you click in the box the co-linearity between the parameters is displayed.</p>
+                <figcaption><b>Figure 6:</b> Gray boxes between the parameters point to a co-linearity (correlation): the darker the box the larger the correlation (which also holds for inverse correlations). If you click in the box the co-linearity between the parameters is displayed.</figcaption>
                 </td>
               </tr>
             </table>
@@ -1677,9 +1677,9 @@
             <p>Please note that three different longitudinal models are offered. The first longitudinal model is optimized for processing and capturing smaller changes over time in response to short-term plasticity effects (e.g. from learning and training). This model will probably not be as sensitive for larger longitudinal changes where large parts of the brain change over time (e.g. atrophy due to Alzheimer&quot;s disease or aging). This is due to the effect of estimating the parameters of spatial registration from the deformations of all time points and then applying them to all time points. If a large atrophy occurs between the time points, this can lead to a displacement of tissue boundaries and might result in areas with reduced volumes over time, which are surrounded by areas with increased volume due to these displacement problems. For data with larger volume changes over time, you should choose the longitudinal model, which is optimized to detect larger changes (e.g. due to ageing). This model also takes into account the deformations between time points and prevents the problems mentioned above. Finally, there also exists a longitudinal processing pipeline for neurodeveopmental data where we can also see changes in head size which should be taken into account.</p>
             <p>Additional attention is then required for the setup of the statistical model. The following section therefore describes the data preprocessing and model setup for longitudinal data.</p>
             <p><img id="figure7" width=100% alt="cat_long_pipeline" src="images/cat_long_pipelines.png"></p>
-            <p><b>Figure 7:</b> CAT’s longitudinal processing workflows to examine (a) neuroplasticity, (b) aging, and (c) neurodevelopment<br>
+            <figcaption><b>Figure 7:</b> CAT’s longitudinal processing workflows to examine (a) neuroplasticity, (b) aging, and (c) neurodevelopment<br>
             The first step in all three workflows is the creation of a high-quality average image over all time points. For this purpose, CAT realigns the images from all time points for each participant using inverse-consistent (or symmetric) rigid-body registrations and intra-subject bias field correction. While this is sufficient to create the required average image for the neuroplasticity and aging workflows, the neurodevelopmental workflow requires non-linear registrations in addition. In either case, the resulting average image is segmented using CAT’s regular processing workflow to create a subject-specific tissue probability map (TPM). This TPM is used to enhance the time point-specific processing to create the final segmentations. The final tissue segments are then registered to MNI space to obtain a voxel-comparability across time points and subjects, which differs between all three workflows. In the neuroplasticity workflow, an average of the time point-specific registrations is created to register the tissue segments of all time points to MNI space. The aging workflow does the same in principle but adds additional (very smooth) deformations between the individual images across time points to account for inevitable age-related changes over time (e.g., enlargements of the ventricles). In contrast, the neurodevelopmental workflow needs to account for major changes, such as overall head and brain growth, which requires independent non-linear registrations to MNI space of all images across time points (which are obtained using the default cross-sectional registration model).<br>
-            For surface-based processing, the neuroplasticity and aging models use the processing of the time point average image to create an average surface. The average is then adapted (deformed) to time point specific maps used in the surface creation, whereas the neurodevelopment workflow has to run the independent cross-sectional surface pipeline for each time point.</p>
+            For surface-based processing, the neuroplasticity and aging models use the processing of the time point average image to create an average surface. The average is then adapted (deformed) to time point specific maps used in the surface creation, whereas the neurodevelopment workflow has to run the independent cross-sectional surface pipeline for each time point.</figcaption>
             
             <!-- ############################# -->
             <h4>Preprocessing of longitudinal data - overview</h4>
